fix: index error handler

--- a/html/cars.html
+++ b/html/cars.html
@@ -5,8 +5,7 @@
     <title>驾驶舱—车辆</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/cssPublic.css?3">
-    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/service.css?3">
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" type="text/css" href="../css/cars.css">
@@ -140,7 +139,7 @@
     </div>
     <script src="../libs/echarts.min.js"></script>
     <script src="../js/cars/carsOption.js"></script>
-    <script src="../js/common/jsPublic.js"></script>
+    <script src="../js/common/service.js"></script>
     <script type="text/javascript" src='../js/cars/cars.js'></script>
     <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
