--- a/html/kpis.html
+++ b/html/kpis.html
@@ -6,8 +6,7 @@
     <title>驾驶舱-KPI</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/cssPublic.css">
-    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" type="text/css" href="../css/kpis.css">
@@ -297,7 +296,7 @@
     </div>
 
     <script src="../libs/echarts.min.js"></script>
-    <script src="../js/common/jsPublic.js?1"></script>
+    <script src="../js/common/service.js?1"></script>
     <script type="text/javascript" src='../js/kpis/kpiOption.js'></script>
     <script type="text/javascript" src='../js/kpis/kpis.js'></script>
     <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
