--- a/html/charts.html
+++ b/html/charts.html
@@ -5,8 +5,7 @@
     <title>驾驶舱-实时监控</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/cssPublic.css">
-    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" type="text/css" href="../css/charts.css">
@@ -321,8 +320,7 @@
     </div>
     <script src="../libs/echarts.min.js"></script>
     <script src="../js/watching/chartsPulic.js?1"></script>
-    <script src="../libs/china.js"></script>
-    <script src="../js/common/jsPublic.js"></script>
+    <script src="../js/common/service.js"></script>
     <script type="text/javascript" src='../js/watching/currency.js?a=1'></script>
     <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
