--- a/html/operation.html
+++ b/html/operation.html
@@ -5,8 +5,7 @@
     <title>驾驶舱-运营</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/cssPublic.css">
-    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" type="text/css" href="../css/operation.css">
@@ -178,7 +177,7 @@
     </div>
   </div>
   <script src="../libs/echarts.min.js"></script>
-  <script src="../js/common/jsPublic.js?1"></script>
+  <script src="../js/common/service.js?1"></script>
   <script type="text/javascript" src='../js/operation/operation.js'></script>
   <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
   <script type="text/javascript" src='../js/common/biMonitor.js'></script>
