--- a/html/car-user.html
+++ b/html/car-user.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>驾驶舱-用户</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
-    <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
+    <script src="../libs/flexible.js"></script>
+    <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
+    <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" type="text/css" href="../css/car-user.css">
-    <link rel="stylesheet" href="../css/LArea.css">
-    <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
-    <script src="//h5.shouqiev.com/libs/jquery.min.js"></script>
-    <script src="../js/common/baseUrl.js"></script>
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../js/common/config.js"></script>
     <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
     <script src="../libs/mobiscroll.datetime-2.5.1-zh.js"></script>
     <script src="../libs/singleData.js"></script>
@@ -329,10 +329,10 @@
         </section>
     </div>
     <script src="../libs/echarts.min.js"></script>
-    <script src="../js/car-user/user-option.js"></script>
-    <script src="../js/common/service.js?1"></script>
+    <script src="../js/common/service.js"></script>
+    <script src="../js/common/common.js"></script>
+    <script src="../js/car-user/userOption.js"></script>
     <script type="text/javascript" src='../js/car-user/car-user.js'></script>
-    <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
 </body>
 </html>
