--- a/html/cars.html
+++ b/html/cars.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>驾驶舱—车辆</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
-    <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/service.css?3">
-    <link rel="stylesheet" href="../css/LArea.css">
+    <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
+    <link rel="stylesheet" href="../css/LArea.css">
+    <link rel="stylesheet" type="text/css" href="../css/service.css?3">
     <link rel="stylesheet" type="text/css" href="../css/cars.css">
-    <script src="//h5.shouqiev.com/libs/jquery.min.js"></script>
-    <script src="../js/common/baseUrl.js"></script>
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../js/common/config.js"></script>
     <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
     <script src="../libs/mobiscroll.datetime-2.5.1-zh.js"></script>
     <script src="../libs/singleData.js"></script>
@@ -139,9 +139,9 @@
     </div>
     <script src="../libs/echarts.min.js"></script>
     <script src="../js/cars/carsOption.js"></script>
+    <script src="../js/common/common.js"></script>
     <script src="../js/common/service.js"></script>
     <script type="text/javascript" src='../js/cars/cars.js'></script>
-    <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
 </body>
 </html>
