--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>驾驶舱</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3" />
-    <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
+    <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <script src="//api.shouqiev.com/js/lib/jquery-2.0.3.min.js"></script>
-    <script src="js/common/baseUrl.js"></script>
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="js/common/config.js"></script>
 </head>
 <body>
     <div class="box">
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
+    <script src="../js/common/common.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
