--- a/html/kpis.html
+++ b/html/kpis.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <title>驾驶舱-KPI</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
-    <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/service.css">
-    <link rel="stylesheet" href="../css/LArea.css">
+    <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
+    <link rel="stylesheet" href="../css/LArea.css">
+    <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" type="text/css" href="../css/kpis.css">
-    <script src="//h5.shouqiev.com/libs/jquery.min.js"></script>
-    <script src="../js/common/baseUrl.js"></script>
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../js/common/config.js"></script>
     <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
     <script src="../libs/mobiscroll.datetime-2.5.1-zh.js"></script>
     <script src="../libs/singleData.js"></script>
@@ -296,10 +296,10 @@
     </div>
 
     <script src="../libs/echarts.min.js"></script>
-    <script src="../js/common/service.js?1"></script>
+    <script src="../js/common/service.js"></script>
+    <script src="../js/common/common.js"></script>
     <script type="text/javascript" src='../js/kpis/kpiOption.js'></script>
     <script type="text/javascript" src='../js/kpis/kpis.js'></script>
-    <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
 </body>
 </html>
