--- a/html/operation.html
+++ b/html/operation.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>驾驶舱-运营</title>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
-    <script src="//img.shouqiev.com/h5/libs/flexible.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/service.css">
-    <link rel="stylesheet" href="../css/LArea.css">
+    <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
+    <link rel="stylesheet" href="../css/LArea.css">
+    <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" type="text/css" href="../css/operation.css">
-    <script src="//h5.shouqiev.com/libs/jquery.min.js"></script>
-    <script src="../js/common/baseUrl.js"></script>
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../js/common/config.js"></script>
     <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
     <script src="../libs/mobiscroll.datetime-2.5.1-zh.js"></script>
     <script src="../libs/singleData.js"></script>
@@ -177,9 +177,9 @@
     </div>
   </div>
   <script src="../libs/echarts.min.js"></script>
-  <script src="../js/common/service.js?1"></script>
+  <script src="../js/common/service.js"></script>
+  <script src="../js/common/common.js"></script>
   <script type="text/javascript" src='../js/operation/operation.js'></script>
-  <script src="https://img.shouqiev.com/h5/libs/common.js"></script>
   <script type="text/javascript" src='../js/common/biMonitor.js'></script>
 </body>
 </html>
