add: report func and favicon.ico

--- a/html/customer-service.html
+++ b/html/customer-service.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱—客服分析</title>
+    <link rel="shortcut icon" href="../images/favicon.ico?1"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
