--- a/html/kpis.html
+++ b/html/kpis.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱-KPI</title>
+    <link rel="shortcut icon" href="../images/favicon.ico?1"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
@@ -130,7 +131,7 @@
         </div>
 
 
-        <div id="forCityDetailKPI" style="display: none">   <!-- 详细城市信息默认不展示 -->
+        <div id="forCityDetailKPI" style="display: none">   <!-- 详细城市信息默认不展示,样式写在页面上提升优化视觉效果 -->
             <!-- 城市概览-->
             <section class="section-box" section-id="8">
                 <div class="wrap city-overview">
@@ -147,7 +148,7 @@
                         </div>
                     </div>
                     <div class="responsiblePerson-box">
-                        <p class="phoneBubble monKpi-phoneBubble"><a href=""></a></p>
+                        <p class="phoneBubble citybasic-phoneBubble"><a href=""></a></p>
                         <p class="responsiblePerson"></p>
                     </div>
                 </div>
@@ -296,8 +297,8 @@
     </div>
 
     <script src="../libs/echarts.min.js"></script>
-    <script src="../js/common/service.js"></script>
     <script src="../js/common/common.js"></script>
+    <script src="../js/common/service.js"></script>
     <script type="text/javascript" src='../js/kpis/kpiOption.js'></script>
     <script type="text/javascript" src='../js/kpis/kpis.js'></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
