--- a/html/watch.html
+++ b/html/watch.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱-实时监控</title>
+    <link rel="shortcut icon" href="../images/favicon.ico"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
@@ -319,8 +320,8 @@
         </section>
     </div>
     <script src="../libs/echarts.min.js"></script>
-    <script src="../js/common/service.js"></script>
     <script src="../js/common/common.js"></script>
+    <script src="../js/common/service.js"></script>
     <script src="../js/watch/watchOption.js"></script>
     <script type="text/javascript" src='../js/watch/watch.js'></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
