--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱</title>
+    <link rel="shortcut icon" href="./images/favicon.ico?1"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3" />
     <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -27,6 +28,9 @@
     </div>
 
     <script src="../js/common/common.js"></script>
+    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <script src="../libs/mobile-detect.min.js"></script>
+    <script src="../js/common/service.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
