--- a/html/operation.html
+++ b/html/operation.html
@@ -12,11 +12,8 @@
     <link rel="stylesheet" type="text/css" href="../css/operation.css">
     <script src="../libs/jquery-3.1.1.min.js"></script>
     <script src="../js/common/config.js"></script>
-    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
-    <script src="../libs/mobiscroll.datetime-2.5.1-zh.js"></script>
-    <script src="../libs/singleData.js"></script>
+    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
     <script src="../libs/LArea.js"></script>
-    <script src="../libs/picker.js"></script>
 </head>
 <body>
     <div class="box">
@@ -45,11 +42,11 @@
                     <p class="car-type accd-ct" data-type='2'>燃油车</p>
                 </div>
 
-                <div class="headLine-four">
-                    <p class="itemOne">排名</p>
-                    <p class="itemTwo">车牌号</p>
-                    <p class="itemThree">订单出险率</p>
-                    <p class="itemFour">出险次数</p>
+                <div class="headLine">
+                    <p>排名</p>
+                    <p>车牌号</p>
+                    <p>订单出险率</p>
+                    <p>出险次数</p>
                 </div>
                 <ul class="itemVal acdVal"></ul>
                 <div class="responsiblePerson-box">
@@ -74,11 +71,11 @@
                 </div>
 
                 <div class="headLine">
-                  <p class="itemOne">日期</p>
-                  <p class="itemTwo">单均违章次数</p>
-                  <p class="itemThree">违章率</p>
-                  <p class="itemFour">未处理</p>
-                  <p class="itemFive">平均处理天数</p>
+                  <p>日期</p>
+                  <p>单均违章次数</p>
+                  <p>违章率</p>
+                  <p>未处理</p>
+                  <p>平均处理天数</p>
                 </div>
                 <ul class="itemVal pecVal"></ul>
 
@@ -116,11 +113,11 @@
                 </div>
 
                 <div class="headLine">
-                    <p class="itemOne">车牌号</p>
-                    <p class="itemTwo">违章次数</p>
-                    <p class="itemThree">已处理</p>
-                    <p class="itemFour">未处理</p>
-                    <p class="itemFive">备注</p>
+                    <p>车牌号</p>
+                    <p>违章次数</p>
+                    <p>已处理</p>
+                    <p>未处理</p>
+                    <p>备注</p>
                 </div>
                 <ul class="itemVal pecDetailVal"></ul>
 
@@ -153,11 +150,11 @@
                 </div>
 
                 <div class="headLine">
-                    <p class="itemOne">日期</p>
-                    <p class="itemTwo">推费总额</p>
-                    <p class="itemThree">推费缴纳</p>
-                    <p class="itemFour">逾期未交</p>
-                    <p class="itemFive">缴纳比例</p>
+                    <p>日期</p>
+                    <p>推费总额</p>
+                    <p>推费缴纳</p>
+                    <p>逾期未交</p>
+                    <p>缴纳比例</p>
                 </div>
                 <ul class="itemVal pmVal"></ul>
 
