--- a/html/car-user.html
+++ b/html/car-user.html
@@ -12,11 +12,8 @@
     <link rel="stylesheet" type="text/css" href="../css/car-user.css">
     <script src="../libs/jquery-3.1.1.min.js"></script>
     <script src="../js/common/config.js"></script>
-    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
-    <script src="../libs/mobiscroll.datetime-2.5.1-zh.js"></script>
-    <script src="../libs/singleData.js"></script>
+    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
     <script src="../libs/LArea.js"></script>
-    <script src="../libs/picker.js"></script>
 </head>
 <body>
     <div class="box">
@@ -332,7 +329,7 @@
     <script src="../libs/echarts.min.js"></script>
     <script src="../js/common/common.js"></script>
     <script src="../js/common/service.js"></script>
-    <script src="../js/car-user/userOption.js"></script>
+    <script type="text/javascript" src="../js/car-user/userOption.js"></script>
     <script type="text/javascript" src='../js/car-user/car-user.js'></script>
     <script type="text/javascript" src='../js/common/biMonitor.js'></script>
 </body>
