--- a/html/site.html
+++ b/html/site.html
@@ -12,11 +12,8 @@
     <link rel="stylesheet" type="text/css" href="../css/site.css">
     <script src="../libs/jquery-3.1.1.min.js"></script>
     <script src="../js/common/config.js"></script>
-    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
-    <script src="../libs/mobiscroll.datetime-2.5.1-zh.js"></script>
-    <script src="../libs/singleData.js"></script>
+    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
     <script src="../libs/LArea.js"></script>
-    <script src="../libs/picker.js"></script>
 </head>
 <body>
     <div class="box">
@@ -37,7 +34,7 @@
         <!-- 网点概况 -->
         <section class="section-box" section-id="34">
             <div class="wrap site">
-                <div class="cont-title">网店概况</div>
+                <div class="cont-title">网点概况</div>
                 <div class="headLine">
                     <p>指标名称</p>
                     <p>昨日</p>
@@ -215,7 +212,7 @@
                         <p>车位数</p>
                         <p>下单量</p>
                         <p>取车单</p>
-                        <p>订单执行率%</p>
+                        <p>订单执行率</p>
                         <p>当日完成单</p>
                         <p>当日还车单</p>
                         <p>异地还车单</p>
@@ -225,7 +222,7 @@
                         <p>总收现</p>
                         <p>取车车位均单</p>
                         <p>还车车位均单</p>
-                        <p>异地还车率%</p>
+                        <p>异地还车率</p>
                     </div>
                     <ul class="itemVal soVal"></ul>
                 </div>
