--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>驾驶舱</title>
     <link rel="shortcut icon" href="./images/favicon.ico?1"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3" />
-    <script src="../libs/flexible.js"></script>
+    <script src="./libs/flexible.js"></script>
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="./libs/jquery-3.1.1.min.js"></script>
     <script src="js/common/config.js"></script>
 </head>
 <body>
@@ -19,18 +19,18 @@
                 <input placeholder="账号" class="userName" value="">
             </div>
             <div class="words">
-                <span class="wordsIcon">
-                </span>
+                <span class="wordsIcon"> </span>
                 <input type="password" placeholder="密码" class="wordsName" value="">
             </div>
             <div class="loginBtn">登录</div>
         </div>
     </div>
 
-    <script src="../js/common/common.js"></script>
+    <script src="./js/common/common.js"></script>
     <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
-    <script src="../libs/mobile-detect.min.js"></script>
-    <script src="../js/common/service.js"></script>
+    <script src="./libs/mobile-detect.min.js"></script>
+    <script src="./libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
+    <script src="./js/common/service.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
